@startuml


package com.inveox.srm.application.dto{
    class DigitalLabOrderDto
    class ContainerDto
}


class DigitalLabOrderDto {
    UUID id
	businessId	
	Instant lastStatusChanged
    caseDescription
}

DigitalLabOrderDto *-- "1" DigitalLabOrderStatus
DigitalLabOrderDto *-- "many" ContainerDto


class ContainerDto {
    containerId
    String mainBodyPart
    Integer samples
}

ContainerDto *-- "1" ContainerStatus



package com.inveox.laborder.domain.model {


 enum ContainerStatus {
  NOT_SCANNED
    SCANNED_NO_ISSUES
    SCANNED_BROKEN
    SCANNED_EMPTY
        IN_PROCESS
    SCANNED_COUNT_DIFF
 }

entity DigitalLabOrder {
    UUID id
    businessId
    patientId
    examination_date
    examination_specialist_id
    lastStatusChanged
    scanningNote
    caseDescription
    }
entity Container {
    containerId
}
struct BodyPartSamples {
    bodyPart
    pinCoordinates
    count
}

BaseEntity <|-- DigitalLabOrder
BaseEntity <|-- Container
DigitalLabOrder "1" *-- "many" Container
Container "1" *-- "many" ContainerItem
ContainerItem "1" *-- "many" BodyPartSamples

DigitalLabOrder *-- "1" DigitalLabOrderStatus
Container *-- "1" ContainerStatus

enum DigitalLabOrderStatus {
 DRAFT
 READY_FOR_REVIEW
 READY_TO_SEND
 IN_DELIVERY
 REJECTED
 ACCEPTED
  IN_SRM_PROCESS
}

}

@enduml